--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/mocha": "^8.0.3",
+    "@types/node": "^14.14.6",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "ts-node": "^9.0.0",
