--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "",
   "scripts": {
     "dev": "tsc && node dist/asn1der.js",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,10 @@
   "devDependencies": {
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "chai": "^4.2.0",
+    "eslint": "^7.13.0",
     "mocha": "^8.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
