--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@typescript-eslint/parser": "^4.6.1",
     "chai": "^4.2.0",
     "eslint": "^7.13.0",
-    "mocha": "^8.2.1",
+    "mocha": "^10.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "nvm": "^0.0.4"
   }
 }
